# hamm0r

./: .gitignore  AGENTS.md  Architecture.md  CLAUDE.md  Cargo.toml  ClaudePickUp.md  Datamodel.md  PromptsSpec.md  README.md  Stack.md  ToDo.md  UI.md  commands  current_status.md  default_engagement.db-shm  default_engagement.db-wal  dev-run.sh  linkedInImagen.md  pyproject.toml  req.md  test.md
.claude/: mcp.json  settings.json  settings.local.json
.claude/commands/: repair-tests.md  sync-tests.md
.claude/hooks/: block-env-read.py
.githooks/: post-commit
.github/: security-rules.md
.github/scripts/: security_review.py
.github/workflow/: security-review.yml
.github/workflows/: ci.yml  e2e.yml
analyzer/: README.md  manifest.json
artifacts/8a0bf2ae-04e5-4865-b82a-9ce3e7db78d1/: result.md
artifacts/8a6ad2a8-999f-495a-b680-f4403a75ba3d/: result.md
artifacts/91d73bc8-a429-4eeb-837d-2c490f8c095e/: result.md
artifacts/e9ecc29c-8074-434e-8fe2-ddbfdf826bf0/: result.md
crates/analyzer/: Cargo.toml
crates/analyzer/src/: hosted.rs  lib.rs  llm.rs  manifest.rs  ollama.rs  pipeline.rs  report.rs
crates/analyzer/src/snapshots/: analyzer__report__tests__html_report.snap
crates/analyzer/tests/: report_fixture_snapshot.rs
crates/analyzer/tests/fixtures/: response-0001.txt  response-0002.txt  run-001.jsonl  run-001.verdicts.jsonl
crates/analyzer/tests/snapshots/: report_fixture_snapshot__fixture_run_report_html.snap
crates/analyzor-cli/: Cargo.toml
crates/analyzor-cli/src/: main.rs
crates/hamm0r/: Cargo.toml  tauri.conf.json
crates/hamm0r/capabilities/: default.json
crates/hamm0r/src/: commands.rs  error.rs  logger.rs  main.rs
crates/hamm0r/src/commands/: analysis.rs  analyzer_setup.rs  app_settings.rs  engagements.rs  library.rs  requests.rs  runs.rs  scenarios.rs  secrets.rs  starter_requests.rs  targets.rs  triage.rs
crates/hamm0r/src/commands/analyzer_setup/: detect.rs  install.rs  manifest.rs
crates/runner/: Cargo.toml
crates/runner/src/: adapter.rs  canary.rs  client.rs  deps.rs  error.rs  leak_scanner.rs  lib.rs  multi_session.rs  mutation.rs  redact.rs  run.rs  session.rs  template.rs
crates/runner/tests/: integration.rs
crates/skills/: guildelines.md
crates/storage/: Cargo.toml
crates/storage/src/: analyzer_install.rs  engagements.rs  lib.rs  logs.rs  metrics.rs  paths.rs  prompts.rs  reports.rs  requests.rs  runs.rs  scenarios.rs  secrets.rs  settings.rs  targets.rs  triage.rs  types.rs  verdicts.rs  write.rs  yaml_dir.rs
crates/storage/src/migrations/: mod.rs  v2.rs
data/: prompts.json
data/engagements/default_engagement/: meta.json  results.json  runs.json  scenarios.json  targets.json
db/: repository.py  schema.sql
docs/: Architecture.md  Datamodel.md  PromptsSpec.md  STYLEGUIDE.md  Stack.md  TODO-opi-integration.md  Testconcept.md  ToDo.md  ToDo2.md  ai_testing_mindmap.md  authHelper.md  futureIdeas.md  httpRequest.md  productVision.md  reminder.md  themePalette.html
docs/example/: mindMap.md  promt0r — workbench.html
docs/example/promt0r — workbench_files/: css2
docs/plans/: LoggerPlan.md  RefactorPlan.md  RequestPlan.md  analyzorPlan.md  cloudLLMPlan.md  colorThemes.Md  e2ePlan.md  hamm0rWeb.md  multiSessionPlan.md  settingsPlan.md
docs/scenarios/: ui_scenarios.md
evaluat0r/: __main__.py  heuristics.py  judge.py  ollama_client.py  pyproject.toml  report.py
evaluat0r/templates/: findings_report.html  report.css  report.html
examples/profiler/prompts/: profiler-jobs.yaml  profiler-profiles.yaml
examples/profiler/prompts/ausschreibungen/: 01_Senior_Testmanager_CoreBanking.txt  02_Test_Automation_Engineer_ECommerce.txt  03_Performance_Test_Engineer_ConnectedCar.txt  04_Testanalyst_Schadensmanagement.txt  05_Penetration_Tester_HealthTech.txt  06_Mobile_Test_Engineer_BankingApp.txt  07_Testmanager_EGovernment.txt  08_API_Test_Engineer_Logistik.txt  09_Accessibility_Test_Specialist_EdTech.txt  10_Test_Automation_Embedded_ADAS.txt  11_UAT_Koordinator_Pharma_SAP.txt  12_Testdatenmanager_Telekommunikation.txt  13_Agile_Test_Lead_SaaS.txt  14_QA_Engineer_Gaming.txt  15_Test_Consultant_Energiewirtschaft.txt
examples/profiler/requests/: profiler-ai-analyze-testmanager-05.yaml  profiler-ai-analyze-testmanager-100.yaml  profiler-ai-analyze-testmanager-25.yaml  profiler-ai-analyze-testmanager-45.yaml  profiler-ai-analyze-testmanager-65.yaml  profiler-ai-analyze-testmanager-75.yaml  profiler-ai-analyze-testmanager-85-2.yaml  profiler-ai-analyze-testmanager-85.yaml
prompts/: Untitled-1.txt  baselines.yaml  exfil.yaml  injection-classics.yaml  injection-strategies.yaml  library.yaml  mogelPrompts.yaml  owasp-agentic-2026.yaml  owasp-llm-2025.yaml  pinj.yaml  unbounded-consumption.yaml
requests/: anthropic-messages.yaml  azure-openai-chat-completions.yaml  generic-rest-json.yaml  ollama-chat-local.yaml  openai-chat-completions.yaml  profiler-ai-analyze-de.yaml
runner/: __main__.py  attack_runner.py  http_client.py  mutations.py  scenario_runner.py  signals.py  target_config.py
scripts/: init_default_engagement.py  install.sh  seed_prompts.py
scripts/mcp-testmanager/: package-lock.json  package.json  server.js
sidecar/: __main__.py  commands.py  dev_server.py  protocol.py  store.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
tests/: test_attack_runner.py  test_evaluat0r.py  test_http_client.py  test_repository.py  test_scenarios.py  test_sidecar.py  test_target_config.py
tests/e2e/: package-lock.json  package.json  playwright.config.js
tests/e2e/fixtures/: index.js  tauri-mock.js
tests/e2e/specs/: home.spec.js  library.spec.js  navigation.spec.js
ui/: index.html  style.css
ui/images/: README.md  sult.md
ui/js/: api.js  app.js
