[workspace]
resolver = "2"
members = [
    "crates/hamm0r",
    "crates/runner",
    "crates/storage",
    "crates/analyzer",
    "crates/analyzor-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Toni Gansel <toni.gansel@gmail.com>"]
rust-version = "1.88"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tempfile = "3"
directories = "5"
# Native OS credential vaults (Win Credential Manager, macOS Keychain,
# Linux Secret Service). Without these features, keyring uses a no-op mock.
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
