[package]
name = "hamm0r"
version = "0.1.0"
edition = "2021"
description = "AI security testing tool for LLM-based systems"

[dependencies]
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[[bin]]
name = "hamm0r"
path = "src/main.rs"
