[package]
name = "storage"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tempfile.workspace = true
directories.workspace = true
keyring.workspace = true
regex = "1"

[dev-dependencies]
tokio = { workspace = true }
